Implement new get methods
