# api/swagger.yaml
@@ -5,8 +5,8 @@ info:
     \ application course project a.y. 2018/2019.\n"
   version: "1.0.0"
   title: "Hypermedia course API"
-host: "virtserver.swaggerhub.com"
-basePath: "/superaverage2/Hypermedia/1.0.0"
+host: polimi-hyp-2019-team-10489796.herokuapp.com
+basePath: /v2
 tags:
 - name: "Books"
 - name: "Authors"
@@ -188,39 +188,6 @@ paths:
                   format: "int64"
                 book:
                   $ref: "#/definitions/Book"
-        400:
-          description: "Bad request."
-        404:
-          description: "Book not found."
-      x-swagger-router-controller: "Books"
-  /books/{book_id}/authors:
-    get:
-      tags:
-      - "Books"
-      summary: "Returns the lists of authors of a specific book."
-      operationId: "booksBookIdAuthorsGET"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "book_id"
-        in: "path"
-        description: "The id of the reference book."
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        200:
-          description: "A list of authors."
-          schema:
-            type: "array"
-            items:
-              type: "object"
-              properties:
-                author_id:
-                  type: "integer"
-                  format: "int64"
-                author:
-                  $ref: "#/definitions/Author"
         400:
           description: "Bad request."
         404:
