# service/BooksService.js
@@ -3,35 +3,6 @@
 const {database} = require("./Database");
 const _ = require("lodash");
 
-/**
- * Returns the lists of authors of a specific book.
- *
- * book_id Long The id of the reference book.
- * returns List
- **/
-exports.booksBookIdAuthorsGET = async (book_id) => {
-    //find the given book
-    const book = (await database.select().table("book").where("book_id","=",book_id))[0];
-
-    //if the book doesn't exist
-    if(!book) throw {code: 404};
-
-    const authors = await database("author")
-        .join("authorship", "author.author_id", "authorship.author_id")
-        .where("authorship.book_id", "=", book_id)
-        .select("name", "surname", "author.author_id", "author.imgpath");
-
-    const result = [];
-    for(let i=0; i<authors.length; i++) {
-        result[i] = {
-            "author_id" : authors[i].author_id,
-            "author" : _.pick(authors[i], ['name', 'surname', 'birthdate', 'birthplace', 'biography', 'imgpath'])
-        }
-    }
-
-    return result;
-};
-
 
 /**
  * Returns the lists of presentation events of a specific book.
@@ -46,9 +17,20 @@ exports.booksBookIdEventsGET = async (book_id) => {
     //if the book doesn't exist
     if(!book) throw {code: 404};
 
-    return await database("event")
-        .where("book_id", "=", book_id)
-        .select("event_id","date","description","location","organizer_email");
+    //retrieve a preview of all the events of the book
+    const events = await database("event").select("book_id","event_id","location","date","imgpath").where("book_id","=",book_id);
+
+    //format the response
+    const result = [];
+    for(let i=0; i<events.length; i++) {
+        events[i].date = (events[i].date).toISOString().slice(0,10);
+        result[i] = {
+            "event_id" : events[i].event_id,
+            "event" : _.pick(events[i], ["book_id","location", "date", "imgpath"])
+        }
+    }
+
+    return result;
 };
 
 
@@ -166,17 +148,21 @@ exports.booksBookIdSimiliarsGET = async (book_id,offset,limit) => {
  *
  * returns List
  **/
-exports.booksFavouriteGET = function() {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = [ "{}", "{}" ];
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
+exports.booksFavouriteGET = async () => {
+    //retrieve the favourite books
+    const books = await database("favourite").join("book","book.book_id","favourite.book_id");
+
+    //format the response
+    const result = [];
+    for(let i=0; i<books.length; i++) {
+        result[i] = {
+            "book_id" : books[i].book_id,
+            "book" : _.pick(books[i], ["title", "current_price", "imgpath", "author_id", "abstract"])
+        }
     }
-  });
-}
+
+    return result;
+};
 
 
 /**
@@ -190,32 +176,28 @@ exports.booksFavouriteGET = function() {
  * returns List
  **/
 exports.booksGET = async (keyword,genre,theme,offset,limit) => {
-    offset = 0;
-    limit = 100;
-
     let books;
+
     //if keyword is specified, then retrieve all books matching that keyword
     if (keyword) {
         books = await database("book")
-            .select('book_id', 'title', 'current_price')
+            .select("book_id","title", "current_price", "imgpath", "author_id", "abstract")
             .where("title", "LIKE", "%"+keyword+"%")
             .limit(limit)
             .offset(offset);
     }
     //else if the genre is specified, retrieve all books of that genre
     else if (genre) {
-        //find all the books matching the offset and limit
         books = await database("book")
-            .select('book_id', 'title', 'current_price', 'imgpath')
+            .select("book_id","title", "current_price", "imgpath", "author_id", "abstract")
             .whereRaw("exists(select * from book B join genre on genre.book_id = B.book_id where genre = ? and B.book_id = book.book_id)", [genre])
             .limit(limit)
             .offset(offset);
     }
     //else if the theme is specified, retrieve all books of that theme
     else if (theme) {
-        //find all the books matching the offset and limit
         books = await database("book")
-            .select('book_id', 'title', 'current_price', 'imgpath')
+            .select("book_id","title", "current_price", "imgpath", "author_id", "abstract")
             .whereRaw("exists(select * from book B join theme on theme.book_id = B.book_id where theme = ? and B.book_id = book.book_id)", [theme])
             .limit(limit)
             .offset(offset);
@@ -223,7 +205,7 @@ exports.booksGET = async (keyword,genre,theme,offset,limit) => {
     //if nothing specified
     else {
         books = await database("book")
-            .select('book_id', 'title', 'current_price', 'imgpath')
+            .select("book_id","title", "current_price", "imgpath", "author_id", "abstract")
             .limit(limit)
             .offset(offset);
     }
@@ -240,7 +222,17 @@ exports.booksGET = async (keyword,genre,theme,offset,limit) => {
             .where("genre.book_id","=",books[i].book_id)
             .select("genre")).map(a => a.genre);
     }
-    return books;
+
+    //format the response
+    const result = [];
+    for(let i=0; i<books.length; i++) {
+        result[i] = {
+            "book_id" : books[i].book_id,
+            "book" : _.pick(books[i], ["title", "current_price", "imgpath","author_id","abstract"])
+        }
+    }
+
+    return result;
 };
 
 
@@ -249,17 +241,21 @@ exports.booksGET = async (keyword,genre,theme,offset,limit) => {
  *
  * returns List
  **/
-exports.booksTop10GET = function() {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = [ "{}", "{}" ];
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
+exports.booksTop10GET = async () => {
+    //retrieve the favourite books
+    const books = await database("top10").join("book","book.book_id","top10.book_id");
+
+    //format the response
+    const result = [];
+    for(let i=0; i<books.length; i++) {
+        result[i] = {
+            "book_id" : books[i].book_id,
+            "book" : _.pick(books[i], ["title", "current_price", "imgpath", "author_id", "abstract"])
+        }
     }
-  });
-}
+
+    return result;
+};
 
 
 /**
